crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_non_inheritable_group_attrs__remove_non_inheritable_group_attrs-2.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_non_inheritable_group_attrs.rs
expression: "test_config(r#\"{ \"removeNonInheritableGroupAttrs\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- removes non-inheritable attrs -->\n    <g vector-effect=\"non-scaling-stroke\" stroke=\"blue\">\n        <path d=\"M0 0 L 10 20\"/>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- removes non-inheritable attrs -->
    <g stroke="blue">
        <path d="M0 0 L 10 20"></path>
    </g>
</svg>
