crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_non_inheritable_group_attrs__remove_non_inheritable_group_attrs.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_non_inheritable_group_attrs.rs
expression: "test_config(r#\"{ \"removeNonInheritableGroupAttrs\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- retain inheritable attrs -->\n    <g class=\"test\" clip-path=\"url(#clip1)\" transform=\"rotate(45)\" display=\"none\" opacity=\"0.5\" visibility=\"visible\">\n        <path d=\"M0 0 L 10 20\"/>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- retain inheritable attrs -->
    <g class="test" clip-path="url(#clip1)" transform="rotate(45)" display="none" opacity="0.5" visibility="visible">
        <path d="M0 0 L 10 20"/>
    </g>
</svg>
